--- a/common/dhcp-options.5
+++ b/common/dhcp-options.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhcp-options.5,v 1.45.18.5 2010/07/13 20:56:56 dhankins Exp $
+.\"	$Id: dhcp-options.5,v 1.45.18.6 2011/05/20 14:33:26 tomasz Exp $
 .\"
 .\" Copyright (c) 2004-2010 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
@@ -1451,9 +1451,7 @@ configured.
 .RS 0.25i
 .PP
 The \fBrapid-commit\fR option is a zero-length option that clients use
-to indicate their desire to enter into rapid-commit with the server.  This
-option is not supported by the client at this time, and is digested by
-the server when present, so should not be configured.
+to indicate their desire to enter into rapid-commit with the server.
 .RE
 .PP
 .B option \fBdhcp6.vendor-opts\fR \fIstring\fR\fB;\fR
@@ -1589,11 +1587,25 @@ The \fBnis-domain-name\fR option specifies the NIS domain name the client is
 expected to use, and is related to the \fBnis-servers\fR option.
 .RE
 .PP
+.B option \fBdhcp6.nis-domain-name\fR \fIdomain-name\fR\fB;\fR
+.RS 0.25i
+.PP
+The \fBdhcp6.nis-domain-name\fR option specfies NIS domain name the
+client is expected to use, and is related to \fBdhcp6.nis-servers\fR option.
+.RE
+.PP
 .B option \fBnisp-domain-name\fR \fIdomain-list\fR\fB;\fR
 .RS 0.25i
 .PP
 The \fBnisp-domain-name\fR option specifies the NIS+ domain name the client
 is expected to use, and is related to the \fBnisp-servers\fR option.
+.RE
+.PP
+.B option \fBdhcp6.nisp-domain-name\fR \fIdomain-name\fR\fB;\fR
+.RS 0.25i
+.PP
+The \fBdhcp6.nis-domain-name\fR option specfies NIS+ domain name the
+client is expected to use, and is related to \fBdhcp6.nisp-servers\fR option.
 .RE
 .PP
 .B option
