--- a/server/dhcpd.conf.5
+++ b/server/dhcpd.conf.5
@@ -27,7 +27,7 @@
 .\" Support and other services are available for ISC products - see
 .\" https://www.isc.org for more information or to learn more about ISC.
 .\"
-.\" $Id: dhcpd.conf.5,v 1.110 2011/05/12 13:26:55 tomasz Exp $
+.\" $Id: dhcpd.conf.5,v 1.111 2011/06/01 23:25:37 sar Exp $
 .\"
 .TH dhcpd.conf 5
 .SH NAME
@@ -1277,7 +1277,7 @@ chooses a new name.
 The interim DNS update scheme is called interim for two reasons.
 First, it does not quite follow the RFCs.   The RFCs call for a
 new DHCID RRtype while he interim DNS update scheme uses a TXT record.
-The ddns-resolution draft cllaed for the DHCP server to put a DHCID RR
+The ddns-resolution draft called for the DHCP server to put a DHCID RR
 on the PTR record, but the \fIinterim\fR update method does not do this.
 In the final RFC this requirement was relaxed such that a server may
 add a DHCID RR to the PTR record.
