--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			     Version 4.2.1-P1
-			      25 March 2011
+			     Version 4.2.2b1
+			      28 June 2011
 
 			      README FILE
 
@@ -97,7 +97,7 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.2.1-P1, a security release containing patches.
+This is ISC DHCP 4.2.2b1, a maintenance release containing patches.
 
 In this release, the DHCPv6 server should be fully functional on Linux,
 Solaris, or any BSD.  The DHCPv6 client should be similarly functional
@@ -132,12 +132,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.2.1-P1.tar.gz
-	tar xvf dhcp-4.2.1-P1.tar
+	gunzip dhcp-4.2.2b1.tar.gz
+	tar xvf dhcp-4.2.2b1.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.2.1-P1 subdirectory that you've just created and
+Now, cd to the dhcp-4.2.2b1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
