Update version string and dates for 3.1-ESV-R2

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-			   Version 3.1-ESV-R1
-			     March 25, 2011
+			   Version 3.1-ESV-R2
+			     July 27, 2011
 
 			      README FILE
 
@@ -92,11 +92,10 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 3.1-ESV-R1, an extended support (ESV) release that seeks
-only to fix bugs present in ISC DHCP 3.1.3-ESV or prior, and provides no
+This is ISC DHCP 3.1-ESV-R2, an extended support (ESV) release that seeks
+only to fix bugs present in ISC DHCP 3.1.3-ESV-R1 or prior, and provides no
 new features.  ESVs are intended for users who have longer upgrade
-constraints and only critical bug and security fixes will be added to
-future ESV releases.  Please see our web page
+constraints.  Please see our web page
 http://www.isc.org/downloads/extended-support for more information on
 ESVs.
 
@@ -141,12 +140,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-3.1-ESV-R1.tar.gz
-	tar xvf dhcp-3.1-ESV-R1.tar
+	gunzip dhcp-3.1-ESV-R2.tar.gz
+	tar xvf dhcp-3.1-ESV-R2.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-3.1-ESV-R1 subdirectory that you've just created and
+Now, cd to the dhcp-3.1-ESV-R2 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
