--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-		           Version 4.1-ESV-R3b1
-			      28 June 2011
+		           Version 4.1-ESV-R3
+			      27 July 2011
 
 			      README FILE
 
@@ -96,7 +96,7 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.1-ESV-R3b1, the beta for an extended support (ESV)
+This is ISC DHCP 4.1-ESV-R3, an extended support (ESV)
 release that provides patches for a number of bugs.
 
 ESVs are intended for users who have longer upgrade constraints 
@@ -137,12 +137,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.1-ESV-R3b1.tar.gz
-	tar xvf dhcp-4.1-ESV-R3b1.tar
+	gunzip dhcp-4.1-ESV-R3.tar.gz
+	tar xvf dhcp-4.1-ESV-R3.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.1-ESV-R3b1 subdirectory that you've just created and
+Now, cd to the dhcp-4.1-ESV-R3 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
