--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhclient.conf.5,v 1.32 2011/04/21 13:24:24 tomasz Exp $
+.\"	$Id: dhclient.conf.5,v 1.33 2012/01/24 22:21:04 sar Exp $
 .\"
 .\" Copyright (c) 2009-2011 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
@@ -147,7 +147,8 @@ they will not make their requests in lockstep.   The
 .I backoff-cutoff
 statement determines the maximum amount of time that the client is
 allowed to back off, the actual value will be evaluated randomly between
-1/2 to 1 1/2 times the \fItime\fR specified.   It defaults to two minutes.
+1/2 to 1 1/2 times the \fItime\fR specified.   It defaults to fifteen
+seconds.
 .PP
 .I The
 .B initial-interval
