--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -1,6 +1,6 @@
-.\"	$Id: dhclient.conf.5,v 1.22.64.7.6.1 2011/04/21 15:01:23 tomasz Exp $
+.\"	$Id: dhclient.conf.5,v 1.22.64.7.6.2 2012/01/24 22:25:32 sar Exp $
 .\"
-.\" Copyright (c) 2009-2011 by Internet Systems Consortium, Inc. ("ISC")
+.\" Copyright (c) 2009-2012 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 1996-2003 by Internet Software Consortium
 .\"
@@ -147,7 +147,8 @@ they will not make their requests in lockstep.   The
 .I backoff-cutoff
 statement determines the maximum amount of time that the client is
 allowed to back off, the actual value will be evaluated randomly between
-1/2 to 1 1/2 times the \fItime\fR specified.   It defaults to two minutes.
+1/2 to 1 1/2 times the \fItime\fR specified.   It defaults to fifteen
+secondss.
 .PP
 .I The
 .B initial-interval
