--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 	      Internet Systems Consortium DHCP Distribution
-		           Version 4.1-ESV-R4-Oracle
-			    22 February 2012
+		           Version 4.1-ESV-R5b1
+			      12 April 2012
 
 			      README FILE
 
@@ -96,9 +96,8 @@ directory, it may not have up-to-date information).
 
 			    RELEASE STATUS
 
-This is ISC DHCP 4.1-ESV-R4, an extended support (ESV)
-release that provides patches for a pair of bugs one of
-which is a potential security issue.
+This is ISC DHCP 4.1-ESV-R5b1, a beta of an extended support (ESV)
+release that provides patches for a set of bugs.
 
 ESVs are intended for users who have longer upgrade constraints 
 Please see our web page http://www.isc.org/downloads/extended-support
@@ -138,12 +137,12 @@ information.   On Digital Unix, type ``man pfilt''.
 To build the DHCP Distribution, unpack the compressed tar file using
 the tar utility and the gzip command - type something like:
 
-	gunzip dhcp-4.1-ESV-R4-Oracle.tar.gz
-	tar xvf dhcp-4.1-ESV-R4-Oracle.tar
+	gunzip dhcp-4.1-ESV-R5b1.tar.gz
+	tar xvf dhcp-4.1-ESV-R5b1.tar
 
 			    CONFIGURING IT
 
-Now, cd to the dhcp-4.1-ESV-R4-Oracle subdirectory that you've just created and
+Now, cd to the dhcp-4.1-ESV-R5b1 subdirectory that you've just created and
 configure the source tree by typing:
 
 	./configure
