--- a/client/dhclient.conf.5
+++ b/client/dhclient.conf.5
@@ -1,4 +1,4 @@
-.\"	$Id: dhclient.conf.5,v 1.25.24.9 2012/04/16 16:06:23 sar Exp $
+.\"	$Id: dhclient.conf.5,v 1.25.24.10 2012/04/16 17:17:48 sar Exp $
 .\"
 .\" Copyright (c) 2009-2012 by Internet Systems Consortium, Inc. ("ISC")
 .\" Copyright (c) 2004,2007 by Internet Systems Consortium, Inc. ("ISC")
@@ -148,7 +148,7 @@ they will not make their requests in lockstep.   The
 statement determines the maximum amount of time that the client is
 allowed to back off, the actual value will be evaluated randomly between
 1/2 to 1 1/2 times the \fItime\fR specified.   It defaults to fifteen
-secondss.
+seconds.
 .PP
 .I The
 .B initial-interval
