--- a/doc/devel/mainpage.dox
+++ b/doc/devel/mainpage.dox
@@ -10,5 +10,12 @@
  @section toc Table Of Contents
   - @subpage tests
   - @subpage debug
-  
+
+ Doxygen logs:
+
+ Note: some of the links below may not work if corresponding logs are not available.<br/>
+
+ Doxygen: <a href="doxygen.log">[generation log]</a> <a href="doxygen-warnings.log">[errors and warnings]</a> <br/>
+ cppcheck: <a href="cppcheck.log">[generation log]</a> <a href="cppcheck-error.log">[errors and warnings]</a> <br/>
+
  */
