[rt25901_atf] Spelling fix in Developer's Guide

--- a/doc/devel/mainpage.dox
+++ b/doc/devel/mainpage.dox
@@ -1,6 +1,6 @@
 /**
  @mainpage
- This an ISC DHCP Developer's Guide. This documentation is intended for
+ This is an ISC DHCP Developer's Guide. This documentation is intended for
  developers, contributors and other programmers that are interested in
  internal operation of the code.
 
